--- a/printer_data/config/user-macros/print-seq.cfg
+++ b/printer_data/config/user-macros/print-seq.cfg
@@ -41,7 +41,6 @@ gcode:
   UPDATE_DELAYED_GCODE ID=SEQ_PRINT_END DURATION=0 ; cancel end print seq from previous print
   
   SET_LED LED=chamber_lights WHITE=0.25 TRANSMIT=1
-  TURN_ON_ACTIVE_TOOLHEAD_LEDS
   M117 Homing
   G28
   T0
@@ -58,19 +57,31 @@ gcode:
   M117 BED HEATING TO {BED_TEMP}
   M190 S{BED_TEMP}
 
-  CLEAN_NOZZLE
+  WIPE_NOZZLE
   M109 S150
 
   M117 Quad Gantry Level
   QUAD_GANTRY_LEVEL
   G28 Z
 
-  TOOL_BED_MESH_CALIBRATE
-  # BED_MESH_PROFILE LOAD=default
+  TOOL_BED_MESH_CALIBRATE_CLIENT
+  ;BED_MESH_PROFILE LOAD=default
+
+  M117 Preheating the hotends
+  {% for tool_nr in printer.toolchanger.tool_numbers %}
+    {% set tooltemp_param = 'T' ~ tool_nr|string ~ '_TEMP' %}
+    {% if tooltemp_param in params %}
+      M104 T{tool_nr} S{params[tooltemp_param]}
+    {% endif %}
+  {% endfor %}
+
+  TURN_ON_ACTIVE_TOOLHEAD_LEDS
   
   M117 Purging
-  PRIME_PURGE
-    
+  PRIME_PURGE INITIAL_TOOL={params.TOOL}
+
+  ;G0 Y5 F10000 ; move off the brush
+  
   {% if TOOL >= 0 %}
     M104 T0 S0 ; shutdown T0.  If it's up first it will be heated below.
     T{params.TOOL}
@@ -83,6 +94,9 @@ gcode:
 
   START_TOOL_PROBE_CRASH_DETECTION
   M117 Printing
+  WIPE_NOZZLE
+  G1 E0.5 F800
+  
   SENSOR_ENABLE
 
 [gcode_macro PRINT_END]
@@ -94,7 +108,7 @@ gcode:
   G92 E0 
   SENSOR_DISABLE
   #SET_FAN_SPEED FAN="exhaust_fan" SPEED=1.0  ; vent the fumes
-  G1 E-10 F3600 ; retract 10mm at end
+  G1 E-20 F3600 ; retract 10mm at end
 
   G91
   {% if printer.toolhead.position.z < (max_z - 20) %}
@@ -102,8 +116,9 @@ gcode:
   {% else %}
       {% set z_safe = max_z - printer.toolhead.position.z %}
   {% endif %}
-  G0 Z{z_safe} F9000             
+  G0 Z{z_safe} F9000       
 
+  T0
   G90
   G0 Y340 F10000 ; move to back, fk the QGL; no dock crashing risk
   
@@ -113,7 +128,6 @@ gcode:
   M140 S0                       
   SET_TEMPERATURE_FAN_TARGET TEMPERATURE_FAN=controller_fan TARGET=50  
 
-  T0
   #STOP_TOOL_PROBE_CRASH_DETECTION
   M18
   M117 Print done
@@ -164,10 +178,21 @@ gcode:
         SAVE_GCODE_STATE NAME=PAUSEPARK                                                      ; save parked position in case toolhead is moved during the pause (otherwise the return zhop can error)
         {% set tools = printer.toolchanger.tool_names %}
         {% for tool in tools %}
-          M104 T{printer[tool].tool_number} S150 ;Cooldown up the filament
+          M104 T{printer[tool].tool_number} S0 ;Cooldown up the filament
         {% endfor %}                                                                             ; turn off hotend
         SET_IDLE_TIMEOUT TIMEOUT=43200                                                       ; set timeout to 12 hours
     {% endif %}
+
+[gcode_macro TOOL_BED_MESH_CALIBRATE_CLIENT]
+gcode:
+      {% set tool_z_offset = printer[printer.toolchanger.tool].gcode_z_offset %}
+      G90 ; absolute mode
+      G0 Z10 F1000
+      # Bed mesh knows about the probe offset, but not about the tool offset.
+      SET_KINEMATIC_POSITION Z={10.0-tool_z_offset|float}
+      BED_MESH_CALIBRATE ADAPTIVE=1 
+      G0 Z10 F1000
+      SET_KINEMATIC_POSITION Z={10.0+tool_z_offset|float}
 
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
